# Copyright 2020 Hathor Labs
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[tool.poetry]
name = "hathorlib"
version = "0.1.1"
description = "Hathor Network base objects library"
authors = ["Hathor Team <contact@hathor.network>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://hathor.network/"
repository = "https://github.com/HathorNetwork/python-hathorlib/"
# https://pypi.org/classifiers/
classifiers = [
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License",
]
include = ["hathorlib/py.typed"]
exclude = ["tests", "tests.*"]

[tool.poetry.dependencies]
python = ">=3.6,<4.0"
base58 = ">=2.1.0"
structlog = {version = ">=20.0.0", optional = true}
aiohttp = {version = ">=3.7.0", optional = true}
cryptography = ">=3.3.1"

# TODO: We should migrate from asynctest to pytest-asyncio when we raise our minimum Python version to 3.7
[tool.poetry.dev-dependencies]
isort = ">=5.7.0"
mypy = ">=0.812"
pytest = ">=6.2.0"
pytest-cov = ">=2.11.0"
flake8 = "^4.0.1"
asynctest = "^0.13.0"

[tool.poetry.extras]
client = ["aiohttp", "structlog"]

[tool.isort]
combine_as_imports = true
default_section = "THIRDPARTY"
include_trailing_comma = true
known_first_party = "hathorlib,tests"
line_length = 119
multi_line_output = 3

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
